User management [delivers #104882186]

--- a/app/views/layouts/_admin_sidebar.html.erb
+++ b/app/views/layouts/_admin_sidebar.html.erb
@@ -34,7 +34,7 @@
 
     <li>
       <%= link_to destroy_user_session_path, method: :delete do %>
-          <i class="fi-arrow-right size-18"> <%= t("backend.logout")%></i>
+          <i class="fi-arrow-left size-18"> <%= t("backend.logout")%></i>
       <% end %>
     </li>
 
