--- a/app/views/holders/show.html.erb
+++ b/app/views/holders/show.html.erb
@@ -1,4 +1,6 @@
-<h1><%= @holder.full_name_comma %></h3>
+<h3><%= @holder.full_name_comma %></h3>
+<%= link_to t('backend.edit'), edit_holder_path(@holder), :class=> "button tiny radius success" %>
+<%= link_to t('backend.cancel'), holders_path , :class=> "button tiny radius" %>
 <fieldset>
   <legend><%= t('backend.basic_data') %></legend>
   <p><strong><%= t('backend.first_name') %>:</strong> <%= @holder.first_name %></p>
@@ -14,13 +16,11 @@
   </div>
   <% @holder.positions.each do |position| %>
   <div class="row">
-    <div class="small-2 columns"><%= position.from.strftime(t('date.formats.short')) if position.from.present? %></div>
-    <div class="small-2 columns"><%= position.to.strftime(t('date.formats.short')) if position.to.present? %></div>
+    <div class="small-2 columns"><%= show_date(position.from) %></div>
+    <div class="small-2 columns"><%= show_date(position.to) %></div>
     <div class="small-4 columns"><%= position.title %></div>
     <div class="small-4 columns"><%= position.area.title %></div>
   </div>
   <% end %>
 </fieldset>
-<%= link_to t('backend.edit'), edit_holder_path(@holder), :class=> "button radius success right" %>
-<%= link_to t('backend.cancel'), holders_path , :class=> "button radius right" %>
 
