--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -1,49 +1,56 @@
 <div class="row">
   <h1>
-    <%= t('backend.contributors')%> (<%= @users.count %>)
-    <%= link_to t('backend.new_contributor'), new_user_path, :class => "button radius warning right" if can? :create, User %>
+    <%= t('backend.users')%> (<%= @users.count %>)
+    <%= link_to t('backend.new_user'), new_user_path, :class => "button radius warning right" if can? :create, User %>
   </h1>
 </div>
+<div class="row">
+  <table id="listing" class="display" cellpadding="0" width="100%">
+    <thead>
+    <tr>
+      <th><%= t('backend.name')%></th>
+      <th><%= t('backend.role')%></th>
+      <th><%= t('backend.positions')%></th>
+      <th><%= t('backend.actions')%></th>
+    </tr>
+    </thead>
+    <tfoot>
+    <tr>
+      <th><%= t('backend.name')%></th>
+      <th><%= t('backend.role')%></th>
+      <th><%= t('backend.positions')%></th>
+      <th><%= t('backend.actions')%></th>
+    </tr>
+    </tfoot>
+    <tbody>
+    <% @users.each do |user| %>
+        <tr>
+          <td>
+            <%= link_to user.full_name_comma, user_path(user) %><br />
+            <%= user.email %>
+          </td>
+          <td>
+            <%= user.role.capitalize %>
+          </td>
+          <td>
+            <% user.manages.map{|h| h.holder.full_name}.each do |m| %>
+                <%= m %><br />
+            <% end %>
+          </td>
+          <td>
+            <%= link_to edit_user_path(user), title: t('backend.edit') do %>
+              <i class="step fi-page-edit size-24"></i>
+            <% end if can? :edit, User %>
 
-<table id="listing" class="display" cellpadding="0" width="100%">
-  <thead>
-  <tr>
-    <th><%= t('backend.name')%></th>
-    <th><%= t('backend.role')%></th>
-    <th><%= t('backend.positions')%></th>
-    <th><%= t('backend.actions')%></th>
-  </tr>
-  </thead>
-  <tfoot>
-  <tr>
-    <th><%= t('backend.name')%></th>
-    <th><%= t('backend.role')%></th>
-    <th><%= t('backend.positions')%></th>
-    <th><%= t('backend.actions')%></th>
-  </tr>
-  </tfoot>
-  <tbody>
-  <% @users.each do |u| %>
-      <tr>
-        <td>
-          <%= link_to u.full_name_comma, edit_user_path(u) %><br /><%= u.email %>
-        </td>
-        <td>
-          <%= u.role %>
-        </td>
-        <td>
-          <% u.manages.map{|h| h.holder.full_name}.each do |m| %>
-              <%= m %><br />
-          <% end %>
-        </td>
-        <td>
-          <%= link_to "Edit", edit_user_path(u)  %> ·
-          <%= link_to t("backend.delete"), user_path(u), method: :delete, data: { confirm: t("backend.confirm") } if can? :delete, User %>
-        </td>
-      </tr>
-  <% end %>
-  </tbody>
-</table>
+            <%= link_to user_path(user), method: :delete, data: { confirm: t("backend.confirm") }, title: t('backend.delete') do%>
+              <i class="step fi-page-delete size-24"></i>
+            <% end if can? :delete, User%>
+          </td>
+        </tr>
+    <% end %>
+    </tbody>
+  </table>
+</div>
 
 <%= javascript_include_tag 'admin_listings' %>
 
