Change uweb web service endpoint

--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -27,7 +27,7 @@
 
   <nav class="top-bar show-for-small-only" data-topbar role="navigation">
     <div class="header__base">
-      <img class="header__imago" src="/assets/madrid.png" alt="¡Madrid">
+      <%= image_tag('madrid.png', class: 'left', size: '96x96') %>
       <h1 class="header__title"><strong>Gobierno abierto</strong> Transparencia</h1>
     </div>
     <div class="toggle-topbar menu-icon"><a href="#"><span></span></a></div>
