Datatables JS translations

--- a/app/assets/javascripts/admin_listings.js.erb
+++ b/app/assets/javascripts/admin_listings.js.erb
@@ -1,7 +1,7 @@
 $(function(){
   $('#listing').DataTable( {
     "order": [[ 0, "desc" ]],
-    "language":{"url": "/assets/dependencies/dataTables.<%= I18n.locale %>.json"}
+    "language":{"url": "/locales/dataTables.<%= I18n.locale %>.json"}
   });
 });
 
