--- a/app/views/layouts/_admin_sidebar.html.erb
+++ b/app/views/layouts/_admin_sidebar.html.erb
@@ -3,28 +3,26 @@
     <li>
       Administración
     </li>
-    <% if can? :manage, User %>
+    <% if current_user.admin? %>
     <li class="<%= active_menu('users') %>">
       <a href="<%= users_path %>">
         <i class="fi-results-demographics size-18"> <%= t("backend.users")%></i>
       </a>
     </li>
     <% end %>
-    <% if can? :manage, Event %>
     <li class="<%= active_menu('events') %>">
       <a href="<%= events_path %>">
         <i class="fi-calendar size-18"> <%= t("backend.events")%></i>
       </a>
     </li>
-    <% end %>
-    <% if can? :manage, Area %>
+    <% if current_user.admin? %>
     <li class="<%= active_menu('areas') %>">
       <a href="<%= areas_path %>">
         <i class="fi-web size-18"> <%= t("backend.areas")%></i>
       </a>
     </li>
     <% end %>
-    <% if can? :manage, Holder %>
+    <% if current_user.admin? %>
     <li class="<%= active_menu('holders') %>">
       <a href="<%= holders_path %>">
         <i class="fi-address-book size-18"> <%= t("backend.positions")%></i>
