Review can can abilities

--- a/app/views/areas/_area.html.erb
+++ b/app/views/areas/_area.html.erb
@@ -1,6 +1,6 @@
 <tr data-tt-id="<%= area.id %>" <%= parent_label(area) %>>
   <td>
-    <%= link_to area.title, area_path(area) %>
+    <%= area.title %>
   </td>
   <td>
     <p><%= area.children.count %></p>
