--- a/app/views/events/show.html.erb
+++ b/app/views/events/show.html.erb
@@ -1,6 +1,6 @@
 <h3><%= @event.title %></h3>
 <%= link_to t('backend.edit'), edit_event_path(@event), :class=> "button tiny radius success" if can? :edit, Event %>
-<%= link_to t('backend.cancel'), events_path , :class=> "button tiny radius" %>
+<%= link_to t('backend.back'), events_path , :class=> "button tiny radius" %>
 <fieldset>
   <legend><%= t('backend.basic_data') %></legend>
   <p><strong><%= t('backend.holder') %>:</strong> <%= @event.position.holder.full_name %></p>
@@ -8,6 +8,21 @@
   <p><strong><%= t('backend.location') %>:</strong> <%= @event.location %></p>
   <p><strong><%= t('backend.date') %>:</strong> <%= show_date(@event.scheduled) %></p>
   <%= @event.description.html_safe %>
+</fieldset>
+<fieldset>
+  <legend><%= t('backend.participants') %></legend>
+  <div class="row">
+    <div class="small-4 columns"><strong><%= t('backend.name') %></strong></div>
+    <div class="small-4 columns"><strong><%= t('backend.position') %></strong></div>
+    <div class="small-4 columns"><strong><%= t('backend.area') %></strong></div>
+  </div>
+  <% @event.participants.each do |participant| %>
+  <div class="row">
+    <div class="small-4 columns"><%= participant.position.holder.full_name %></div>
+    <div class="small-4 columns"><%= participant.position.title %></div>
+    <div class="small-4 columns"><%= participant.position.area.title %></div>
+  </div>
+  <% end %>
 </fieldset>
 <fieldset>
   <legend><%= t('backend.attendees') %></legend>
@@ -21,21 +36,6 @@
     <div class="small-4 columns"><%= attendee.name %></div>
     <div class="small-4 columns"><%= attendee.position %></div>
     <div class="small-4 columns"><%= attendee.company %></div>
-  </div>
-  <% end %>
-</fieldset>
-<fieldset>
-  <legend><%= t('backend.Participants') %></legend>
-  <div class="row">
-    <div class="small-4 columns"><strong><%= t('backend.name') %></strong></div>
-    <div class="small-4 columns"><strong><%= t('backend.position') %></strong></div>
-    <div class="small-4 columns"><strong><%= t('backend.area') %></strong></div>
-  </div>
-  <% @event.participants.each do |participant| %>
-  <div class="row">
-    <div class="small-4 columns"><%= participant.position.holder.full_name %></div>
-    <div class="small-4 columns"><%= participant.position.title %></div>
-    <div class="small-4 columns"><%= participant.position.area.title %></div>
   </div>
   <% end %>
 </fieldset>
