--- a/app/views/visitors/index.html.erb
+++ b/app/views/visitors/index.html.erb
@@ -40,7 +40,7 @@
           <%= event.position.title %> ·
           <%= event.position.area.title%>
         </strong></p>
-        <p><%= event.scheduled.strftime(t('date.formats.complete')) %></p>
+        <p><%= I18n.l event.scheduled, :format => :complete %></p>
       </article>
     <% end %>
   </div>
@@ -54,7 +54,7 @@
   </div>
 
   <div class="small-12 large-4 columns">
-    <p><%= link_to t('main.any_errors'), contact_path %></p>
+    <p><%= link_to t('main.any_errors'), '' %></p>
   </div>
 </div>
 
