--- a/app/views/visitors/show.html.erb
+++ b/app/views/visitors/show.html.erb
@@ -1,7 +1,7 @@
 <div class="row">
   <div class="small-12 large-8 columns">
 
-    <strong class="post__date"><%= @event.scheduled.strftime(t('date.formats.complete')) %></strong>
+    <strong class="post__date"><%= I18n.l @event.scheduled, :format => :complete %></strong>
 
     <h2 class="post__title-big"><%= @event.title %></h2>
 
@@ -77,6 +77,6 @@
 
 <div class="row">
   <div class="small-12 columns">
-    <p><%= link_to t('main.any_errors'), contact_path %></p>
+    <p><%= link_to t('main.any_errors'), '' %></p>
   </div>
 </div>
