Event detail improvements

--- a/app/views/layouts/_admin_sidebar.html.erb
+++ b/app/views/layouts/_admin_sidebar.html.erb
@@ -37,7 +37,7 @@
     </li>
     <% end %>
     <li>
-      <%= link_to root_path, method: :delete do %>
+      <%= link_to root_path do %>
           <i class="fi-arrow-right size-18"> <%= t("backend.frontend")%></i>
       <% end %>
     </li>
