--- a/app/views/users/_form.html.erb
+++ b/app/views/users/_form.html.erb
@@ -36,8 +36,8 @@
         <%= f.fields_for :manages do |manage| %>
             <%= render 'manage_fields', f: manage %>
         <% end %>
-        <%= link_to_add_association t('backend.add'), f, :manages, :class => "button radius tiny info right" %>
       </div>
+      <%= link_to_add_association t('backend.add'), f, :manages, :class => "button radius tiny info right",'data-association-insertion-method' => 'append', 'data-association-insertion-node' => '#manages' %>
     </fieldset>
     <%= submit_tag t('backend.save'), :class=> "button radius success right" %>
 <% end %>
