--- a/app/views/visitors/index.csv.erb
+++ b/app/views/visitors/index.csv.erb
@@ -1,6 +1,6 @@
 <% header = [t('backend.title'), t('backend.description'), t('backend.location'), t('backend.holder'), t('backend.date')]%>
-<%= CSV.generate_line(header,:row_sep => ?\t).strip  %>
+<%= CSV.generate_line(header,:row_sep => ?\t,:col_sep => ';').strip  %>
 <% @events.results.each do |e| %>
-  <% row = [e.title.strip, e.description, e.location, e.position.holder.full_name,e.scheduled.strftime(t('time.formats.short')) ]%>
-  <%= CSV.generate_line(row,:row_sep => ?\t).strip %>
+  <% row = [e.title.strip, strip_tags(e.description), e.location, e.position.holder.full_name,e.scheduled.strftime(t('time.formats.short')) ]%>
+  <%= CSV.generate_line(row,:row_sep => ?\t,:col_sep => ';').strip %>
 <% end %>
