--- a/app/assets/javascripts/holders.js.erb
+++ b/app/assets/javascripts/holders.js.erb
@@ -33,6 +33,7 @@ $(function () {
     function setDatePicker(){
       $('.fdatepicker').fdatepicker({
         format: "<%= I18n.translate('datepicker-format') %>",
+        language: "<%= I18n.locale %>"
       });
     }
 
