--- a/app/views/visitors/headline/_holder.html.erb
+++ b/app/views/visitors/headline/_holder.html.erb
@@ -1,6 +1,7 @@
 <div class="small-12 columns mb10">
   <p>
     <span class="keywords"><%= t('main.events_for') %> </span>
-    <strong class="result-m mb20"><%= link_to Holder.find(params[:holder]).full_name, current_url(params: {:holder => params[:holder]})  %></strong>
+    <% holder = Holder.find(params[:holder]) %>
+    <strong class="result-m mb20"><%= link_to holder.full_name, agenda_path(holder.id, holder.full_name.parameterize)  %></strong>
   </p>
 </div>
