--- a/app/views/visitors/index.html.erb
+++ b/app/views/visitors/index.html.erb
@@ -36,7 +36,7 @@
       <article class="post">
         <h1 class="post__title"><%= link_to event.title, show_path(event) %></h1>
         <p><strong>
-          <%= link_to event.position.holder.full_name , root_path(holder: event.position.holder.id)%> ·
+          <%= show_agenda_link(event.position.holder) %> ·
           <%= event.position.title %> ·
           <%= event.position.area.title%>
         </strong></p>
