--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -22,6 +22,7 @@
   </head>
   <body class="">
     <%= render 'layouts/header' %>
+    <%= render  'layouts/admin_messages' %>
     <div id="main-content" class="main-content">
       <div class="row">
         <div class="small-12">
