--- a/app/views/events/_form.html.erb
+++ b/app/views/events/_form.html.erb
@@ -27,7 +27,7 @@
     </fieldset>
 
     <fieldset><!-- Participants -->
-      <legend><%= t('backend.positions') %></legend>
+      <legend><%= t('backend.participants') %></legend>
       <div class="row">
         <div class="small-10 columns"><%= t('backend.name') %></div>
         <div class="small-2 columns"></div>
@@ -60,7 +60,7 @@
     </fieldset>
 
     <fieldset><!-- Attachments -->
-      <legend><%= t('backend.attachments') %> ( <%= t('backend.only_pdf') %>)</legend>
+      <legend><%= t('backend.attachments') %></legend>
       <div class="row">
         <div class="small-4 columns"><%= t('backend.title') %></div>
         <div class="small-6 columns"><%= t('backend.file') %></div>
