--- a/app/views/users/_form.html.erb
+++ b/app/views/users/_form.html.erb
@@ -22,7 +22,7 @@
       <%= f.label :email, t('backend.email') %>
       <%= f.text_field :email %>
       <%= f.label :role, t('backend.role') %>
-      <%= f.select :role, [[t('backend.user_role'), :user],[t('backend.admin_role'), :admin]] %>
+      <%= f.select :role, [[t('backend.user'), :user],[t('backend.admin'), :admin]] %>
     </fieldset>
 
     <fieldset>
