--- a/app/views/events/index.html.erb
+++ b/app/views/events/index.html.erb
@@ -26,7 +26,7 @@
       <% @events.each do |event| %>
       <tr>
         <td>
-          <p><%= event.scheduled.strftime(t('time.formats.short')) %></p>
+          <p><span class="hide"><%= event.scheduled.strftime(t('time.formats.custom')) %></span><%= event.scheduled.strftime(t('time.formats.short')) %></p>
         </td>
         <td>
           <p><%= link_to event.title, event_path(event) %></p>
