--- a/app/views/visitors/_form.html.erb
+++ b/app/views/visitors/_form.html.erb
@@ -1,11 +1,10 @@
 <div class="small-12 large-4 columns">
-  <p class="mb40"><%= t('main.form.title')%></p>
   <%= form_tag root_path, method: :get do %>
     <%= hidden_field_tag :order, params[:order] %>
     <div class="mb20">
-      <%= label_tag :keyword, t('main.form.keyword'), class: 'title-s' %>
-      <%= text_field_tag :keyword, params[:keyword] %>
+      <%= text_field_tag :keyword, params[:keyword], placeholder: t('main.form.keyword') %>
     </div>
+    <p class="mb40"><%= t('main.form.title')%></p>
     <div class="mb20">
       <%= label_tag :area, t('main.form.main_area'), class: 'title-s' %>
       <div class="custom-select">
