--- a/app/views/visitors/show.html.erb
+++ b/app/views/visitors/show.html.erb
@@ -23,8 +23,8 @@
     <p class="post__description">
       <strong><%= show_agenda_link(@event.position.holder) %></strong>
     </p>
-    <p><%= @event.position.title %></p>
-    <p><%= @event.position.area.title %></p>
+    <p><%= @event.position.title.titleize %></p>
+    <p><%= @event.position.area.title.titleize %></p>
   </div>
 </div>
 
@@ -45,8 +45,8 @@
     <p class="post__description">
       <strong><%= show_agenda_link(participant.position.holder) %></strong>
     </p>
-    <p><%= participant.position.title %></p>
-    <p><%= participant.position.area.title %></p>
+    <p><%= participant.position.title.titleize %></p>
+    <p><%= participant.position.area.title.titleize %></p>
     <br />
     <% end %>
   </div>
